# client_packers-movers

./: .dockerignore  .env.example  .env.production  .gitignore  BUG_ANALYSIS_OTP_EMAIL.md  CHANGES_SUMMARY.md  DEPLOY_NOW.md  PRODUCTION_EMAIL_FIX.md  QUICK_START_TESTING.md  README.md  ROOT_CAUSE_ANALYSIS.md  STRIPE_404_FIX.md  add_job_columns.sql  add_otp_method.py  add_otp_method_column.sql  add_profile_photo_migration.py  alembic.ini  app.json  check_db.py  check_invoice_status.py  cleanup_and_update_jobs.sql  client_backend.code-workspace  deploy_email_fix.bat  deploy_email_fix.sh  drop_columns_migration.py  generate_missing_invoice.py  main.py  migrate_job_columns.py  pyproject.toml  remove_job_boolean_columns.sql  requirements.txt  seed_service_levels.py  test_email.py  test_static_files.py  verify_payment_endpoints.py
alembic/: env.py
app/core/: auto_assign.py  email.py  location.py  payment.py  pricing.py  security.py  sms.py  storage.py
app/database/: db.py
app/models/: client.py  invoice.py  job.py  payment.py  service.py  service_level.py
app/routers/: __init__.py  auth.py  invoice.py  job.py  job_draft.py  payment.py  payment_success.py  pricing.py  service.py  service_level.py
app/schemas/: auth.py  job.py  job_draft.py  service_level.py
static/stripe/: success.html
