[tool.poetry]
name = "emergency-property-clearance"
version = "1.0.0"
description = "FastAPI backend for UK-based Emergency Property Clearance & Operations platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
psycopg2 = "^2.9.11"
dotenv = "^0.9.9"
sqlalchemy = "2.0.23"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
psycopg2-binary = "^2.9.11"
reportlab = "^4.4.7"
asyncpg = "^0.31.0"
boto3 = "^1.42.26"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
